--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
-# Sử dụng một Node.js image gọn nhẹ và ổn định
-FROM node:18-alpine
+# SỬA Ở ĐÂY: Sử dụng Node.js phiên bản 20 để tương thích với Colyseus
+FROM node:20-alpine
 
 # Đặt thư mục làm việc bên trong container
 WORKDIR /usr/src/app
@@ -7,16 +7,15 @@ WORKDIR /usr/src/app
 # Sao chép package.json và package-lock.json trước
 COPY package*.json ./
 
-# Cài đặt CHỈ các dependencies cần cho production.
-# --omit=dev là cách làm hiện đại, nó sẽ bỏ qua devDependencies.
-# Điều này an toàn vì chúng ta đã chuyển typescript sang dependencies.
-RUN npm install --omit=dev
+# Cài đặt các dependencies
+# Lệnh này sẽ cài cả dependencies và devDependencies nếu NODE_ENV không được set
+# Hoặc nó sẽ cài typescript vì nó đã nằm trong dependencies
+RUN npm install
 
 # Sao chép toàn bộ mã nguồn còn lại
 COPY . .
 
 # Biên dịch mã TypeScript thành JavaScript
-# Lệnh này sẽ hoạt động vì typescript đã được cài ở bước trên.
 RUN npm run build
 
 # Lệnh để chạy ứng dụng sau khi build xong
