--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "npm i typescript && tsc",
     "clean": "rmdir /s /q dist 2>nul || echo \"No dist folder to clean\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
